fix board overflow problem, center large boards upon generation

--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,8 @@ header {
   position: fixed;
   display: flex;
   padding: 20px;
+  left: 50%;
+  margin-left: -400px;
   gap: 20px;
   justify-content: space-between;
   width: 800px;
@@ -87,7 +89,7 @@ input {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
   Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   font-weight: bold;
-  width: 100px;
+  width: 200px;
   outline:0;
   border: 5px;
   padding: 10px;
@@ -108,9 +110,8 @@ h1 {
 }
 
 container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  display: grid;
+  place-items: center;
   
 }
 
